<resources>
    <string name="app_name" translatable="false">metronome-project</string>
    <string name="minus_1" translatable="false">-1</string>
    <string name="plus_1" translatable="false">+1</string>
    <string name="plus_10" translatable="false">+10</string>
    <string name="minus_10" translatable="false">-10</string>
    <string name="tap" translatable="false">TAP</string>
    <string name="run" translatable="false">RUN</string>
    <string name="prefs_language">language</string>
    <string name="prefs_tick_sound">tick sound</string>
    <string name="prefs_change_theme">change theme</string>
    <string name="prefs_information">information</string>
    <string name="create_an_account">create an account</string>
    <string name="enter_your_email">enter your email to sign up for this app</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="or_continue_with">or continue with</string>
    <string name="google" translatable="false">google</string>
    <string name="i_already_have_an_account">i already have an account</string>
    <string name="sign_in">sign in</string>
    <string name="enter_your_email_and_password">enter your email and password</string>
    <string name="settings">settings</string>
    <string name="sign_up">sign up</string>
    <string name="account_settings">account settings</string>
    <string name="anon">anon</string>
    <string name="change_nickname">change nickname</string>
    <string name="log_out">log out</string>
    <string name="delete_account">delete account</string>
    <string name="account">account</string>
</resources>