<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
        android:key="account"
        android:title="account"
        android:summary=""/>

    <ListPreference
        android:key="languages"
        android:title="@string/prefs_language"
        app:allowDividerAbove="true"
        app:useSimpleSummaryProvider="true"
        android:entries="@array/languages_entries"
        android:entryValues="@array/languages_values"
        android:defaultValue="1"/>

    <ListPreference
        android:key="ticks"
        android:title="@string/prefs_tick_sound"
        app:allowDividerAbove="true"
        app:useSimpleSummaryProvider="true"
        android:entries="@array/ticks_entries"
        android:entryValues="@array/ticks_values"
        android:defaultValue="1"/>

    <ListPreference
        android:key="theme"
        android:title="@string/prefs_change_theme"
        app:allowDividerAbove="true"
        app:useSimpleSummaryProvider="true"
        android:entries="@array/themes_entries"
        android:entryValues="@array/themes_values"
        android:defaultValue="1"/>

    <Preference
        android:key="info"
        android:title="@string/prefs_information"
        app:allowDividerAbove="true"/>

</androidx.preference.PreferenceScreen>